@@ -1,7 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.cmc.ccd.domain.CCDCase;
@@ -12,6 +10,7 @@ import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.cmc.domain.models.ClaimData;
 import uk.gov.hmcts.cmc.domain.models.Interest;
 import uk.gov.hmcts.cmc.domain.models.amount.AmountBreakDown;
+import uk.gov.hmcts.cmc.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
@@ -40,7 +39,8 @@ import static uk.gov.hmcts.cmc.domain.utils.MonetaryConversions.poundsToPennies;
 public class HWFRecalculateInterestCallbackHandler extends CallbackHandler {
 
     private static final String FEE_EVENT = "issue";
-    private static final String FEE_CHANNEL = "online";
+    private static final String ONLINE_FEE_CHANNEL = "online";
+    private static final String DEFAULT_FEE_CHANNEL = "default";
 
     private static final String INTEREST_NOT_CLAIMED = "Recalculation is not required as interest is not claimed";
     private static final String NOT_HWF_CLAIM = "Recalculation is not required for non HWF Claims";
@@ -48,20 +48,24 @@ public class HWFRecalculateInterestCallbackHandler extends CallbackHandler {
         + "only claimed to the date of claim submission";
 
     private static final List<Role> ROLES = Collections.singletonList(CASEWORKER);
-    private static final List<CaseEvent> EVENTS = ImmutableList.of(RECALCULATE_INTEREST);
+    private static final List<CaseEvent> EVENTS = List.of(RECALCULATE_INTEREST);
 
     private final FeesClient feesClient;
     private final CaseDetailsConverter caseDetailsConverter;
 
+    private final LaunchDarklyClient launchDarklyClient;
+
     @Autowired
-    public HWFRecalculateInterestCallbackHandler(CaseDetailsConverter caseDetailsConverter, FeesClient feesClient) {
+    public HWFRecalculateInterestCallbackHandler(CaseDetailsConverter caseDetailsConverter, FeesClient feesClient,
+                                                 LaunchDarklyClient launchDarklyClient) {
         this.caseDetailsConverter = caseDetailsConverter;
         this.feesClient = feesClient;
+        this.launchDarklyClient = launchDarklyClient;
     }
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(
+        return Map.of(
             ABOUT_TO_START, this::validateClaim,
             ABOUT_TO_SUBMIT, this::recalculateInterest
         );
@@ -103,7 +107,12 @@ public class HWFRecalculateInterestCallbackHandler extends CallbackHandler {
         final BigDecimal claimAmount = ((AmountBreakDown) claim.getClaimData().getAmount()).getTotalAmount();
         final BigDecimal claimAmountPlusInterest = claimAmount.add(calculatedInterest);
 
-        final FeeLookupResponseDto feeOutcome = feesClient.lookupFee(FEE_CHANNEL, FEE_EVENT, claimAmountPlusInterest);
+        String channel = ONLINE_FEE_CHANNEL;
+        if (launchDarklyClient.isFeatureEnabled("new-claim-fees", LaunchDarklyClient.CLAIM_STORE_USER)) {
+            channel = DEFAULT_FEE_CHANNEL;
+        }
+
+        final FeeLookupResponseDto feeOutcome = feesClient.lookupFee(channel, FEE_EVENT, claimAmountPlusInterest);
         ccdCase.setFeeAmountInPennies(valueOf(poundsToPennies(feeOutcome.getFeeAmount())));
 
         final BigDecimal totalAmountIncludingFee = claimAmountPlusInterest.add(feeOutcome.getFeeAmount());
